# DL

./: CMakeLists.txt  NN.cpp  NN.h  main.cpp  saveData.cpp  saveData.h
web/: index.html
web/css/: style.css
web/js/: script.js
